--- a/Css/views.css
+++ b/Css/views.css
@@ -1,42 +1,44 @@
-
 body {
-    display: flex;
-    flex-direction: column;
-    align-items:center;
+
 }
 
 .app_title {
-    display: flex;
-    justify-content: center;
-    align-items:center;
     margin: 2rem;
 }
 
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items:center;
+    margin: auto;
     width: 50%;
     border-style: solid;
     border-color: gray;
 }
 
 h1 {
+    text-align: center;
     color: aquamarine;
 }
 .title {
     margin-top: 2rem;
+    width: 100%;
 }
 
 form input {
     margin-bottom: 2rem;
 }
 
-form #post {
-  margin-bottom: 2rem;
+#post {
+    margin-bottom: 2rem;
+    width: 100%;
 }
 
-.post_form {
-    flex-direction: column;
-    display: flex;
+.checbox {
+    text-align: center;
+}
+
+.post_btn_area {
+    text-align: center;
+}
+
+.post_btn {
+    padding: 0.6rem 6rem !important;
 }
