--- a/Css/views.css
+++ b/Css/views.css
@@ -14,6 +14,7 @@ h1 {
     text-align: center;
     color: #0dcaf0;
 }
+
 .title {
     margin-top: 2rem;
     width: 100%;
@@ -47,6 +48,12 @@ form input {
     margin-bottom: 1rem;
     padding-top: 1rem;
     border-top: solid;
+    border-bottom: solid;
+    border-width: thin;
+    border-color: gray;
+}
+
+.post_user {
     border-bottom: solid;
     border-width: thin;
     border-color: gray;
