--- a/Css/views.css
+++ b/Css/views.css
@@ -71,3 +71,42 @@ form input {
 .upload_message {
     color: red;
 }
+
+/* モーダル */
+.modal_image {
+    position: fixed;
+    background-color: whitesmoke;
+    max-height: 70%;
+    max-width: 45%;
+    width: 100%;
+    top: 15%;
+    left: 30%;
+    padding: 10rem;
+    border: solid;
+    z-index: 3;
+    opacity: 0;
+    visibility: hidden
+}
+
+/* モーダル背景 */
+.modal_background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden
+}
+
+.modal_background.open {
+    opacity: 0.7;
+    visibility: visible;
+}
+
+.modal_image.open {
+    opacity: 1;
+    visibility: visible;
+}
