--- a/Css/views.css
+++ b/Css/views.css
@@ -1,9 +1,19 @@
 
+body {
+    background-color: #EEEEEE !important;
+}
+
 .app_title {
-    margin: 2rem;
+    /* background-color: blue; */
+    width: 100%;
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 .wrapper {
+    /* background-color: red; */
+    text-align: center;
     margin: auto;
     width: 50%;
     border-style: solid;
@@ -16,13 +26,17 @@ h1 {
 }
 
 .title {
-    margin-top: 2rem;
+    /* background-color: greenyellow; */
+    position: relative;
+    margin-top: 3rem;
     width: 100%;
+
 }
 
 form input {
     margin-bottom: 2rem;
 }
+
 
 #post {
     margin-bottom: 2rem;
@@ -30,12 +44,17 @@ form input {
 }
 
 .checkbox {
-    text-align: center;
+    width:35%;
+    margin: auto;
 }
 
-.post_btn_area {
-    text-align: center;
+.checkbox label {
+    margin-right: 0.2rem;
 }
+
+/* .post_btn_area {
+    text-align: center;
+} */
 
 .post_btn {
     padding: 0.6rem 6rem !important;
@@ -68,28 +87,33 @@ form input {
     padding: 1rem;
 }
 
-.upload_message {
-    color: red;
-}
-
 /* モーダル */
 .modal_image {
     position: fixed;
-    background-color: whitesmoke;
-    max-height: 70%;
-    max-width: 45%;
-    width: 100%;
-    top: 15%;
+    width: 40%;
+    height: 70%;
+    top: 12%;
     left: 30%;
-    padding: 10rem;
-    border: solid;
     z-index: 3;
+    visibility: hidden;
     opacity: 0;
-    visibility: hidden
+    transition: 0.7s;
+    /* display: none; */
+}
+
+.modal_contents {
+    position: absolute;
+    background-color: white;
+    padding: 1rem;
+    max-height: 100%;
+    min-height: 100%;
+    max-width: 100%;
+    min-width: 100%;
+    z-index: 4;
 }
 
 /* モーダル背景 */
-.modal_background {
+    .modal_background {
     position: fixed;
     top: 0;
     left: 0;
@@ -97,16 +121,56 @@ form input {
     height: 100%;
     background-color: black;
     z-index: 2;
-    opacity: 0;
-    visibility: hidden
-}
-
-.modal_background.open {
-    opacity: 0.7;
-    visibility: visible;
+    transition: 0.7s;
 }
 
 .modal_image.open {
     opacity: 1;
     visibility: visible;
 }
+
+.modal_background.open {
+    opacity: 0.7;
+    /* display: block; */
+}
+
+.header {
+    position: relative;
+}
+
+.page_link {
+    text-align: center;
+    margin: 2rem;
+}
+
+.page_link a {
+    text-decoration: none;
+    margin: 1rem;
+    color: black;
+}
+
+.page_link a:hover {
+    color: #0dcaf0;
+    text-decoration:underline;
+}
+
+.upload_message {
+    color: red;
+}
+
+.title_error_message {
+    position: absolute;
+    margin-top: 3rem;
+    color: red;
+    margin-top: 1.3rem;
+    margin-bottom: 1rem;
+    text-align: left;
+}
+
+/* .body_error_message {
+    margin-top: 3rem;
+    color: red;
+    width: 100% ;
+    height: 100%;
+    text-align: left;
+} */
