--- a/Css/mypage.css
+++ b/Css/mypage.css
@@ -52,7 +52,7 @@ form input {
 
 .posts_delete a {
     /* background-color: red; */
-    color: saddlebrown;
+    color: black;
     text-decoration: none;
     margin-left: 90%;
 }
